--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "react": "^15.4.1",
+    "react-codemirror": "^0.3.0",
     "react-dom": "^15.4.1"
   },
   "scripts": {
